--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -5,8 +5,7 @@
 }
 
 .container {
-  background: -webkit-linear-gradient(to bottom, #93f9b9, #1d976c);
-  background: linear-gradient(to bottom, #93f9b9, #1d976c);
+  background: #f6ece3;
 
   @include desktop {
     display: flex;
@@ -50,7 +49,7 @@
 .titleContainer {
   display: flex;
   justify-content: flex-start;
-  padding-left: 30px;
+  padding: 1.85rem;
   align-items: center;
   height: 80px;
   @include desktop {
@@ -71,10 +70,10 @@
 .btnNext {
   background-color: var(--button-border);
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   text-align: center;
   margin: 0.5rem 0rem;
-  width: 160px;
+  width: 140px;
   height: 45px;
   border: none;
   border-radius: 2rem;
@@ -84,6 +83,11 @@
     color: white;
     cursor: pointer;
   }
+
+  @include desktop {
+    font-size: 1.5rem;
+    width: 160px;
+  }
 }
 
 .btnBack {
@@ -91,16 +95,21 @@
   border: none;
   background-color: var(--container);
   color: #000;
-  width: 160px;
+  width: 140px;
   height: 45px;
   margin: 0.5rem 0rem;
   text-align: center;
-  font-size: 1.5rem;
-  border-radius: 8px;
+  font-size: 1.1rem;
+  border-radius: 2rem;
   &:hover {
     background-color: black;
     color: white;
     cursor: pointer;
+  }
+
+  @include desktop {
+    font-size: 1.5rem;
+    width: 160px;
   }
 }
 
