--- a/styles/AdStyling/LivingInfo.module.scss
+++ b/styles/AdStyling/LivingInfo.module.scss
@@ -1,3 +1,10 @@
+$sm: 350px;
+$md: 830px;
+$lg: 1200px;
+$primaryColor: #0e5657;
+$peachColor: #f88e75;
+$beigeColor: #f6ece3;
+
 .container {
   display: flex;
   flex-direction: column;
@@ -18,7 +25,9 @@
 
   iframe {
     margin-bottom: 2.5rem;
-    // width: 300px;
-    // height: 250px;
+    @media (min-width: $md) {
+      width: 100%;
+      height: 350px;
+    }
   }
 }
