--- a/styles/Footer/Footer.module.scss
+++ b/styles/Footer/Footer.module.scss
@@ -13,21 +13,21 @@ $beigeColor: #f6ece3;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 250px;
+  height: 200px;
   margin-left: 0;
   bottom: 0;
   width: 100%;
 
   @media (min-width: $md) {
     flex-direction: row;
-    height: 225px;
+    // height: 200px;
     width: 100%;
   }
 
   .IconsContainer {
     display: flex;
     gap: 3.5rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     @media (min-width: $md) {
       flex-direction: row;
       gap: 2rem;
@@ -38,7 +38,7 @@ $beigeColor: #f6ece3;
   .ContactInformationContainer {
     display: flex;
     flex-direction: column;
-    margin-top: 2rem;
+    margin-top: 1rem;
     @media (min-width: $md) {
       flex-direction: row;
       margin-left: 8rem;
