--- a/styles/Navbar/Navbar.module.scss
+++ b/styles/Navbar/Navbar.module.scss
@@ -37,8 +37,12 @@ $primaryColor: #0e5657;
     }
 
     .PrimaryLinksWrapper {
-      display: flex;
+      display: none;
       padding: 1rem;
+      padding: 0.5rem;
+      @media (min-width: $lg) {
+        display: flex;
+      }
     }
 
     li {
@@ -62,7 +66,7 @@ $primaryColor: #0e5657;
     list-style: none;
     transition: all 0.5s ease;
     border-radius: 0 0 2rem 2rem;
-    @media (min-width: $sm) {
+    @media (min-width: $md) {
       .PrimaryLinksWrapper {
         display: flex;
         flex-direction: column;
@@ -79,7 +83,7 @@ $primaryColor: #0e5657;
       padding-top: 3rem;
       padding-right: 30vw;
 
-      @media (min-width: $lg) {
+      @media (min-width: $md) {
         height: 40vh;
       }
     }
@@ -176,7 +180,7 @@ $primaryColor: #0e5657;
     padding: 1rem;
 
     @media (min-width: $sm) {
-      padding: 0;
+      padding: 1;
     }
   }
 }
