Minor tweaks to nav, footer & login form

--- a/styles/Footer/Footer.module.scss
+++ b/styles/Footer/Footer.module.scss
@@ -6,7 +6,7 @@ $peachColor: #f88e75;
 $beigeColor: #f6ece3;
 
 .Container {
-  position: absolute;
+  position: relative;
   background-color: $primaryColor;
   color: white;
   display: flex;
