--- a/styles/Navbar/Navbar.module.scss
+++ b/styles/Navbar/Navbar.module.scss
@@ -10,6 +10,8 @@ $primaryColor: #0e5657;
   justify-content: center;
   align-items: center;
   position: sticky;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 0px 0px 1.2rem 1.2rem;
 
   @media (min-width: $md) {
     padding: 0;
@@ -64,8 +66,10 @@ $primaryColor: #0e5657;
     left: 0;
     opacity: 1;
     list-style: none;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
     border-radius: 0 0 2rem 2rem;
+    transform: translateY(-16px);
+
     @media (min-width: $md) {
       .PrimaryLinksWrapper {
         display: flex;
