--- a/components/Parts/Card/Card.module.scss
+++ b/components/Parts/Card/Card.module.scss
@@ -22,6 +22,7 @@
   align-content: center;
 
   @include tablet {
+    height: 400px;
     width: 300px;
     flex-wrap: wrap;
   }
@@ -29,7 +30,8 @@
   h2 {
     font-size: 24px;
     color: #171211;
-    text-align: center;
+    margin-bottom: 10px;
+   
   }
 
   p {
