--- a/styles/AdStyling/Extras.module.scss
+++ b/styles/AdStyling/Extras.module.scss
@@ -1,5 +1,5 @@
 $sm: 350px;
-$md: 830px;
+$md: 768px;
 $lg: 1200px;
 $primaryColor: #0e5657;
 $peachColor: #f88e75;
@@ -62,12 +62,17 @@ $beigeColor: #f6ece3;
       }
 
       .ImgWrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin: 1rem 0rem;
-        padding: 1rem 1rem;
+        width: 100px;
+        height: 90px;
         background-color: $beigeColor;
         border-radius: 1rem;
         @media (min-width: $md) {
-          padding: 2.25rem 2.25rem;
+          width: 200px;
+          height: 150px;
           background-color: $beigeColor;
           border-radius: 1rem;
         }
@@ -80,8 +85,8 @@ $beigeColor: #f6ece3;
     height: 3rem;
 
     @media (min-width: $md) {
-      width: 5rem;
-      height: 5rem;
+      width: 4rem;
+      height: 4rem;
     }
   }
 
