--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -196,15 +196,25 @@ $beigeColor: #f6ece3;
       flex-direction: row;
 
       .CityContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         color: white;
         width: 425px;
         height: 290px;
         margin: 2rem 2rem;
         padding: 3.5rem 2rem;
         border-radius: 1rem;
+
         h3 {
           text-align: center;
           font-size: 2.2rem;
+          margin-bottom: 1rem;
+        }
+
+        p {
+          font-size: 1.2rem;
         }
         &:hover {
           filter: grayscale(1);
@@ -262,7 +272,7 @@ $beigeColor: #f6ece3;
       display: flex;
       justify-content: center;
       margin-top: 3rem;
-      margin-bottom: 6.5rem;
+      margin-bottom: 2rem;
 
       h2 {
         font-size: 2rem;
@@ -276,97 +286,14 @@ $beigeColor: #f6ece3;
 
     .StoryContainers {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
-      margin-bottom: 8rem;
+      gap: 3.5rem;
+      padding: 2rem;
 
-      .StoryTwo {
-        display: none;
-        @media (min-width: $md) {
-          display: block;
-        }
-      }
-
-      .StoryThree {
-        display: none;
-        @media (min-width: $md) {
-          display: block;
-        }
-      }
-
-      .IndividualStoryContainer {
-        $curve: 1rem;
-        background-color: #f5eeee;
-        width: 425px;
-        height: 390px;
-        margin: 2rem 2rem;
-        // padding: 0rem 2rem 3rem 2rem;
-        border-radius: $curve;
-
-        h3 {
-          margin-top: 3rem;
-          text-align: center;
-          font-size: 2.2rem;
-          padding: 0rem 2rem 3rem 2rem;
-        }
-
-        p {
-          padding: 0rem 2rem;
-        }
-
-        .ImgWrapper {
-          height: fit-content;
-          display: flex;
-          justify-content: center;
-        }
-
-        .StoryImgContainer {
-          width: 120px;
-          height: 120px;
-          border: 5px solid $peachColor;
-          border-radius: 100%;
-          transform: translateY(-60%);
-          @media (min-width: $md) {
-            border-radius: 100%;
-            // transform: translate(130%, -60%);
-          }
-          // @media (min-width: $sm) {
-          //   transform: translate(90%, -60%);
-          // }
-        }
-
-        .ImgOne {
-          background-image: url("../assets/img/old_woman.avif");
-          background-position: center;
-          background-size: cover;
-        }
-
-        .ImgTwo {
-          display: none;
-          @media (min-width: $md) {
-            display: block;
-            background-image: url("../assets/img/old_couple.avif");
-            background-position: center;
-            background-size: cover;
-          }
-        }
-
-        .ImgThree {
-          display: none;
-          @media (min-width: $md) {
-            display: block;
-            background-image: url("../assets/img/woman_beach.avif");
-            background-position: center;
-            background-size: cover;
-          }
-        }
-
-        .Bottom {
-          width: 100%;
-          height: 80px;
-          background-color: $peachColor;
-          border-radius: 0px 0px $curve $curve;
-        }
+      @media (min-width: $md) {
+        flex-direction: row;
+        gap: 2rem;
       }
     }
 
